--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           plugin_languages_colors: github
           plugin_languages_details: percentage
           #plugin_languages_ignored: html, css  
+          plugin_languages_ignored: php  
           plugin_languages_limit: 12
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 30
