--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,5 @@ jobs:
           plugin_languages_sections: most-used, recently-used   
           plugin_languages_threshold: 0%
           plugin_lines: yes
-          
+          plugin_calendar: yes
+          plugin_calendar_limit: 0
