--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,8 @@ jobs:
           plugin_languages_sections: most-used, recently-used   
           plugin_languages_threshold: 0%
           plugin_lines: yes
+          plugin_lines_sections: history
+          #plugin_lines_repositories_limit: 50
+          #plugin_lines_history_limit: 2
           plugin_calendar: yes
           plugin_calendar_limit: 0
