--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,16 @@ jobs:
           commits_authoring: emptyloominaty
           plugin_habits: yes
           plugin_habits_charts: yes
-          plugin_habits_days: 28
+          plugin_habits_days: 60
           plugin_habits_facts: no
           plugin_habits_from: 300
           plugin_languages: yes
           plugin_languages_analysis_timeout: 60
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_details: percentage
+          plugin_languages_details: bytes-size, percentage, lines
+          plugin_languages_indepth: yes
+          #plugin_languages_details: percentage
           #plugin_languages_ignored: html, css  
           plugin_languages_limit: 12
           plugin_languages_recent_categories: markup, programming
@@ -42,6 +44,5 @@ jobs:
           plugin_calendar: yes
           plugin_calendar_limit: 0
           plugin_lines: yes
-          plugin_lines_sections: history
-          plugin_lines_repositories_limit: 50
-          plugin_lines_history_limit: 2
+          plugin_lines_sections: base
+
