--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
           config_timezone: Europe/Bratislava
           config_display: large
           commits_authoring: emptyloominaty
-          plugin_habits: yes
-          plugin_habits_charts: yes
-          plugin_habits_days: 60
-          plugin_habits_facts: no
-          plugin_habits_from: 300
+          #plugin_habits: yes
+          #plugin_habits_charts: yes
+          #plugin_habits_days: 60
+          #plugin_habits_facts: no
+          #plugin_habits_from: 300
           plugin_languages: yes
           plugin_languages_analysis_timeout: 60
           plugin_languages_categories: markup, programming
